ingress-nginx-oss/deployment-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: f5-hello-world
        image: f5devcentral/f5-hello-world
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
