ingress-nginx-oss/ingress-oss-affinity-cookie.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-affinity-cookie
  annotations:
    kubernetes.io/ingress.class: "nginx-oss"
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-svc
          servicePort: 80
  - host: www.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-svc
          servicePort: 80
