ingress-nginx-oss/ingress-oss-canary-default.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-canary-default
  annotations:
    kubernetes.io/ingress.class: "nginx-oss"
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-v1-svc
          servicePort: 80
