ingress-nginx-oss/ingress-oss-canary-header.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-canary-header
  annotations:
    kubernetes.io/ingress.class: "nginx-oss"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "yes"
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-v2-svc
          servicePort: 80
