ingress-nginx-oss/ingress-oss-canary-weight.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-canary-weight
  annotations:
    kubernetes.io/ingress.class: "nginx-oss"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-v2-svc
          servicePort: 80
